--- a/PRUEBAS/CSS/stilos.css
+++ b/PRUEBAS/CSS/stilos.css
@@ -3,11 +3,19 @@
     padding: 0;
     margin: 0;
 }
-header{
+/*TITULOS*/
+h1{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    background: linear-gradient(10deg, black,red)
+}
+/*HEADER*/
+header h1{
     background-color: gray;
     text-align: center;
     color: greenyellow;
 }
+/*CONTENEDORES*/
 .Contenedor{
     background-color: black;
     color: white;
@@ -24,15 +32,14 @@ footer{
     background-color: darkcyan;
     color: chartreuse;
     text-align: center;
-    position: fixed;
-    width: 100%;
+    width: 95%;
     height: 10%;
-    padding-bottom: 10px;
-    margin-bottom: 10px ;
+    padding: 10px;
+    margin-top: 2%;
 }
 footer p{
     text-align: center;
-    margin: 15px 10px;
+
 }
 /*Para los botones*/
 #btnAceptar{
@@ -61,10 +68,34 @@ footer p{
     box-shadow: 10px 10px 10px green;
     transform: scale(1.1);
 }
+#btnCrearCuenta{
+    width: 100px;
+    height: 40px;
+    border-radius: 30px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(30, 255, 0);
+    transition: 0.5s ease;
+}
+#btnCrearCuenta:hover{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    box-shadow: 10px 10px 10px rgb(0, 51, 128);
+    transform: scale(1.1);
+}
 /*SECTIONS*/
 section{
     padding: 10%;
     margin: 2%;
     border: 2px solid white;
     box-shadow: 10px 10px 10px white;
+}
+/*ESTILOS DEL FORMULARIO*/
+.Formulario{
+    background: linear-gradient(60deg, rgb(255, 255, 255), yellow);
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+    padding: 1%;
 }
