--- a/PRUEBAS/CSS/stilos.css
+++ b/PRUEBAS/CSS/stilos.css
@@ -82,6 +82,19 @@ footer p{
     box-shadow: 10px 10px 10px rgb(0, 51, 128);
     transform: scale(1.1);
 }
+input[type="button"], button{
+    color: black;
+    background-color: gray;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    transition: 0.5s ease;
+}
+input[type="button"]:hover, button:hover{
+    box-shadow: 10px 10px 10px red;
+    background-color: white;
+    color: blueviolet;
+}
 /*SECTIONS*/
 section{
     padding: 10%;
@@ -99,3 +112,28 @@ section{
     text-align: center;
     padding: 1%;
 }
+.Formulario button[type="submit"]{
+    align-items: center;
+    background-color: greenyellow;
+    color: rgb(138, 19, 19);
+    margin: auto;
+}
+.Formulario input[type="text"]{
+    text-align: center;
+}
+/*PARA LAS TABLAS*/
+table {
+    width: 80%;
+    margin: auto;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+th, td {
+    border: 1px solid #aaa;
+    padding: 10px;
+    text-align: left;
+    }
+th {
+     background: #eee;
+}
+
