--- a/PRUEBAS/CSS/stilos.css
+++ b/PRUEBAS/CSS/stilos.css
@@ -86,8 +86,8 @@ footer p{
 input[type="button"], button{
     color: black;
     background-color: gray;
-    width: 100px;
-    height: 30px;
+    width: 200px;
+    height: 50px;
     border-radius: 10px;
     transition: 0.5s ease;
 }
@@ -135,6 +135,12 @@ section{
     margin: auto;
 }
 .Formulario input[type="text"]{
+    text-align: center;
+}
+.Formulario select{
+    text-align: center;
+}
+.Formulario input[type="date"]{
     text-align: center;
 }
 /*PARA LAS TABLAS*/
