Se programo la accion de cancelar el servicio, se creo el  edicionTarea que es donde se programo la accion php, se añadio nuevas alertas al respecto y se mejoro el css

--- a/PRUEBAS/CSS/stilos.css
+++ b/PRUEBAS/CSS/stilos.css
@@ -104,6 +104,13 @@ input[type="button"]:hover, button:hover{
     color: white;
     background-color: red;
 }
+.Cancelar{
+    color: white;
+    background: linear-gradient(0deg, red, black);
+}
+.Cancelar:hover{
+    color: whitesmoke;
+}
 /*SECTIONS*/
 section{
     padding: 10%;
